i worked ob html and css

--- a/lesson_2.html
+++ b/lesson_2.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <title>Ini's website</title>
 </head>
 <body>
-    <h1>AVIATION</h1>
-    <P>Aviation includes the activities surrounding mechanical flight and the aircraft industry. <br> Aircraft includes fixed-wing and rotary-wing types</P>
-    <button>subscribe</button>
-    <img src="pic.jpg" >
-<a href="http://en.wikipedia.org">click here</a>
-<a href="http://en.wikipedia.org" target="_blank">click here</a>
+<a href="http//:www.amazon.com"><u>back to amazon</u></a>
+<p><b>Nike Black Running Shoes</b></p>
+<p><b>$39-in stock</b></p>
+<p><b>Free delivery tomorrow</b></p>
+<button><b><a href="www.amazon.com">Add to Cart</a></b></button>            <button><b><a href="www.amazon.com">Buy now</a></b></button>
+
+
 </body>
 </html>
