--- a/lesson_2.html
+++ b/lesson_2.html
@@ -2,14 +2,19 @@
 <html>
 <head>
     <title>Ini's website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<a href="http//:www.amazon.com"><u>back to amazon</u></a>
+<a href="http://www.amazon.com"><u>back to amazon</u></a>
 <p><b>Nike Black Running Shoes</b></p>
 <p><b>$39-in stock</b></p>
 <p><b>Free delivery tomorrow</b></p>
-<button><b><a href="www.amazon.com">Add to Cart</a></b></button>            <button><b><a href="www.amazon.com">Buy now</a></b></button>
-
+<button id="subscribe">subscribe</button>
+ <button id="like">like</button>
+ <button id="tweet">tweet</button>
+ <button id="Join">Join</button>
+<img id="images" src="images/images (31).jpeg" alt="">
+<input id="search-bar" type="text" placeholder="search Google ">
 
 </body>
 </html>
